Update README.md Update package.json

--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
     "simple"
   ],
   "author": "pkirillw",
-  "license": "ISC",
+  "license": "MIT",
   "bugs": {
     "url": "https://github.com/pkirillw/simple-dropdown-menu/issues"
   },
